--- a/chat-app-css-illustration-master/css/style.css
+++ b/chat-app-css-illustration-master/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.text {
+.Text {
     /* - Pale Violet (sub-heading at the top of the app UI): hsl(276, 100%, 81%) */
     color: hsl(276, 100%, 81%);
     /* - Moderate Violet (chat on the left): hsl(276, 55%, 52%) */
@@ -13,6 +13,21 @@
     color: hsl(271, 36%, 24%);
     /* - Dark Grayish Violet (paragraph): hsl(270, 7%, 64%)     */
     color: hsl(270, 7%, 64%);
+}
+
+.Gradients {
+    background-color: hsl(293, 100%, 63%);
+    background-color: hsl(264, 100%, 61%);
+}
+
+.Secondary {
+    background-color: hsl(0, 0%, 100%);
+    /* app background */
+    background-color: hsl(270, 20%, 96%);
+    /* - Very Dark Desaturated Violet (submit button background):  */
+    background-color: hsl(271, 36%, 24%);
+    /* - Very Light Magenta (radio button outline):  */
+    background-color: hsl(289, 100%, 72%);
 }
 
 
@@ -35,6 +50,7 @@ body {
     font-size: 8px;
     /* background-color: hsl(270, 20%, 96%); */
     background-color: #000;
+    background-color: #fff;
     /* background-color: hsl(293, 100%, 63%); */
     /* background-color: hsl(264, 100%, 61%); */
 }
@@ -50,18 +66,50 @@ h2 {
     color: hsl(276, 100%, 81%);
 }
 
+.topdowncolor {
+    width: 40%;
+    height: 90vh;
+    background: linear-gradient(to right top, hsl(264, 100%, 61%), hsl(293, 100%, 63%));
+    position: relative;
+    /* 左上 | 右上 | 左下 | 右下 */
+    border-radius: 0 0 50% 50%;
+    margin-left: -10%;
+}
+
+.whitecontent {
+    position: absolute;
+    left: 30%;
+    top: 212px;
+    background: #000;
+    background: #fff;
+    /* width: 125px; */
+    width: 125px;
+    height: 30px;
+    /* height: 65px; */
+    z-index: 1;
+    border-radius: 10px;
+}
+
 .mobile {
     /* padding: 10px 15px; */
     display: flex;
     flex-flow: column;
     width: 250px;
     background-color: hsl(270, 20%, 96%);
-    margin-inline: auto;
+    background-color: hsl(0, 0%, 100%);
+    /* margin-inline: auto; */
     margin-top: 100px;
     /* align-items: center; */
     border-radius: 40px;
-    padding-top: 15px;
-    height: 500px;
+    /* padding-top: 15px; */
+    height: 511px;
+    position: absolute;
+    left: 25%;
+    left: calc(30% -125px);
+    /* height: calc(fit-content + 20px); */
+    box-shadow: 2px 10px 2px rgba(228, 226, 226, 0.233);
+    justify-content: center;
+    top: calc((100% - 511px) / 4);
 }
 
 .mobile p {
@@ -99,9 +147,14 @@ h2 {
     display: flex;
     /* justify-content:right; */
     /* 上 | 右 | 下 | 左 */
-    margin: 2% 0 2% auto;
+    /* margin: 2% 0 2% auto; */
+    margin: 2% 4% 2% auto;
     color: hsl(271, 15%, 43%);
 
+}
+
+.comment-in img:nth-of-type(3) {
+    margin-right: 0;
 }
 
 .mobile-main .comment-out {
@@ -115,7 +168,7 @@ h2 {
 
 .mobile-main .comment-walk {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     max-width: 80%;
     width: 60%;
@@ -156,6 +209,7 @@ h2 {
     color: hsl(206, 6%, 79%);
     font-weight: 100;
     font-size: 16px;
+    margin-right: 10px;
     /* transform-origin: 1.5px 50%; */
 }
 
@@ -164,6 +218,7 @@ h2 {
     color: #FFF;
     font-weight: 1000;
     margin-right: 10px;
+    margin-left: auto;
 }
 
 
@@ -197,16 +252,97 @@ h2 {
     padding: 30px 15px 10px 25px;
 
     /* 左上 | 右上 | 左下 | 右下 */
-    border-radius: 40px 40px 5px 5px;
+    border-radius: 35px 35px 5px 5px;
 
     position: relative;
     /* align-items: end; */
 }
 
 .mobile-main {
-    width: calc(100% - 15px);
+    width: calc(100% - 20px);
     margin-inline: auto;
-    background-color: #F5F3F8;
+    height: calc(100% - 80px);
+    border-radius: 35px;
+    border-radius: 25px;
+    /* background-color: #F5F3F8; */
+    background-color: #000;
+    background-color: #fff;
+    background-color: hsl(270, 20%, 96%);
+    margin-top: -35px;
+    padding-top: 35px;
+}
+
+.mobile-main .comment-new {
+    /* max-width: 80%; */
+    /* width: 60%; */
+    max-width: 100%;
+    /* width: 100%; */
+    width: calc(100% - 35px);
+    display: flex;
+    justify-content: space-between;
+    margin: 0 4%;
+    margin: 4%;
+    align-items: center;
+    position: relative;
+    color: hsl(206, 6%, 79%);
+    background-color: hsl(270, 20%, 96%);
+    background-color: hsl(0, 0%, 100%);
+}
+
+/* .comment-new::after {
+    content: '>';
+    margin-left: auto;
+    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: hsl(271, 36%, 24%);
+    padding: 3%;
+    border-radius: 50%;
+    font-size: 6px;
+    height: 6px;
+    font-weight: 1000;
+    width: 6px;
+} */
+
+/* margin-right: auto; */
+/* display: inline-block; */
+
+
+.arrow_r_b {
+    position: relative;
+    display: inline-block;
+    padding-left: 22px;
+}
+
+.comment-new:before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    background: hsl(271, 36%, 24%);
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    /* left: 0; */
+    right: 3px;
+    bottom: 0;
+    margin: auto;
+}
+
+.comment-new:after {
+    content: '';
+    width: 6px;
+    height: 6px;
+    border: 0;
+    border-top: solid 2px #fff;
+    border-right: solid 2px #fff;
+    transform: rotate(45deg);
+    position: absolute;
+    top: 0;
+    /* left: 4px; */
+    right: 11px;
+    bottom: 0;
+    margin: auto;
 }
 
 /* .arrow-left {
@@ -245,6 +381,85 @@ h2 {
 /* .mobile img::after{ */
 .mobile-top::after {
     transform: rotate(-60deg);
+}
+
+/* 縦三点リーダー */
+.three-dot-leader {
+    cursor: pointer;
+    border: none;
+    background: none;
+    display: block;
+    position: relative;
+    /* ボタン要素のサイズ */
+    width: 10px;
+    /* height: 10px; */
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+/* .three-dot-leader:hover{
+    background-color: #fff;
+} */
+
+.three-dot-leader .dot,
+.three-dot-leader .dot::before,
+.three-dot-leader .dot::after {
+    display: block;
+    position: absolute;
+    border-radius: 50%;
+    /* ドット1つのサイズ */
+    width: 2px;
+    height: 2px;
+    /* ドットの色 */
+    background-color: #fff;
+}
+
+.three-dot-leader .dot {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+
+.three-dot-leader .dot::before,
+.three-dot-leader .dot::after {
+    content: '';
+}
+
+.three-dot-leader .dot::before {
+    /* 上側ドットの位置 */
+    top: -3px;
+}
+
+.three-dot-leader .dot::after {
+    /* 下側ドットの位置 */
+    top: 3px;
+}
+
+
+.main {
+    width: 28%;
+    margin-inline: auto;
+    margin-right: 20%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+}
+
+.main p {
+    color: #fff;
+    color: hsl(206, 6%, 79%);
+    font-size: 18px;
+}
+
+h3 {
+    color: #fff;
+    color: hsl(271, 36%, 24%);
+    font-size: 32px;
+    margin: 3% 0;
 }
 
 .mobile-top::before {
